src/test/resources/shexTest/negativeStructure/Cycle1Negation2.shex
PREFIX :       <http://example.org/>

:S { :a { :b NOT @:S } }
